# simplybookapi

./: .gitignore  README.md  build-deploy.sh  requirements.txt  setup.cfg  setup.py
simplybookapi/: __init__.py  api.py  core.py  main.py  sbapi.py
simplybookapi/functions/admin/: get_bookings.py
tests/: test_api.py
tests/live_tests/: auth_token.py  e2e_getAvailableTimeIntervals.py  e2e_getBookings.py  e2e_get_test.py
