[metadata]
name = simplybookapi
version = 0.0.1
author = Cold Bore Capital
author_email = it-group@coldborecapital.com
home_page = https://github.com/Cold-Bore-Capital/simplybookapi
description = A package to help facilitate communications with the Simplybook API
classifiers =
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.10
packages = find:
setup_requires =
    setuptools
install_requires =
    requests>=2.25.1
    cbcdb>=1.0.13
    pandas>=1.3
tests_require =
    requests>=2.25.1
    cbcdb>=1.0.13
    pandas>=1.3