[metadata]
name = simplybookapi
version = 0.0.3
author = Cold Bore Capital
author_email = it-group@coldborecapital.com
home_page = https://github.com/Cold-Bore-Capital/simplybookapi
description = A package to help facilitate communications with the Simplybook.me API
classifiers =
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:
setup_requires =
    setuptools
install_requires =
    pandas>=1.3
    requests~=2.25.1
    cbcdb~=1.0.13
    jsonrpcclient
;    git+git://github.com/Cold-Bore-Capital/cbcvalidator.git@V0.0.7
;    git+git://github.com/Cold-Bore-Capital/configuration-service-core.git@0.0.10
tests_require =
    pandas>=1.3
    requests~=2.25.1
    cbcdb~=1.0.13
    jsonrpcclient
;    git+git://github.com/Cold-Bore-Capital/cbcvalidator.git@V0.0.7
;    git+git://github.com/Cold-Bore-Capital/configuration-service-core.git@0.0.10
